# sam-3d-body

./: .gitignore  0002PFKE#1_00000039.csv  INSTALL.md  README.md  app.py  batch_process.py  check_installation.py  cli.py  code_dump.md  code_dump1.md  collect.sh  config_skeleton.py  core.py  debug_rotations.py  demo.py  fix_dinov3_cache.py  generate_config.py  main.py  pyproject.toml  setup.sh  stress_test.py
data/scripts/: create_webdataset.py
data/scripts/egohumans/: undistort_images.py
data/scripts/harmony4d/: undistort_images.py
notebook/: demo_human.ipynb  utils.py
sam_3d_body/: __init__.py  build_models.py  sam_3d_body_estimator.py
sam_3d_body/data/: __init__.py
sam_3d_body/data/transforms/: __init__.py  bbox_utils.py  common.py
sam_3d_body/data/utils/: io.py  prepare_batch.py
sam_3d_body/metadata/: __init__.py  mhr70.py
sam_3d_body/models/: __init__.py
sam_3d_body/models/backbones/: __init__.py  dinov3.py  vit.py
sam_3d_body/models/decoders/: __init__.py  keypoint_prompt_sampler.py  prompt_encoder.py  promptable_decoder.py
sam_3d_body/models/heads/: __init__.py  camera_head.py  mhr_head.py
sam_3d_body/models/meta_arch/: __init__.py  base_lightning_module.py  base_model.py  sam3d_body.py
sam_3d_body/models/modules/: __init__.py  camera_embed.py  (+7 more)
sam_3d_body/utils/: __init__.py  checkpoint.py  config.py  dist.py  logging.py
sam_3d_body/visualization/: __init__.py  renderer.py  skeleton_visualizer.py  utils.py
tools/: __init__.py  build_detector.py  build_fov_estimator.py  build_sam.py  cascade_mask_rcnn_vitdet_h_75ep.py  vis_utils.py
(+5 files in other folders)
